--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ button{
 <video id="cnTowerBg" src="CN tower.mp4" autoplay loop muted></video>
 
 <!-- AUDIO -->
-<audio id="bgMusic" src="greedy.mp3"></audio>
+<audio id="bgMusic" src="GREEDY.mp3"></audio>
 
 <!-- PAGE 0: INCOMING CALL -->
 <div id="callPage" class="page active call-screen">
@@ -323,4 +323,5 @@ function createRain(){
 </script>
 </body>
 </html>
+
 
