--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body{
     opacity:0;
     pointer-events:none;
     transition:opacity 1s ease;
-    z-index:1; /* pages above video */
+    z-index:1; 
 }
 .active{opacity:1;pointer-events:all;}
 
@@ -54,7 +54,7 @@ body{
     border-radius:50px;
     border:none;
     margin:0 30px;
-    font-size:1.5rem;
+    font-size:1.8rem;
     cursor:pointer;
     transition:transform 0.3s ease, box-shadow 0.3s ease;
     z-index:3;
@@ -140,10 +140,10 @@ button{
     width:100%;
     height:100%;
     object-fit:cover;
-    z-index:0;       /* behind everything */
+    z-index:0; 
     opacity:0.7;
     transition:transform 0.5s ease;
-    pointer-events:none; /* allow clicks through video */
+    pointer-events:none;
 }
 
 /* SHAKE ANIMATION */
@@ -164,9 +164,9 @@ button{
 /* FINAL VALENTINE PAGE IMAGE */
 #valentineImg{
     width: auto;
-    height: 90vh;           /* fill most of screen height */
-    max-width: 95vw;        /* ensure it doesn't overflow width */
-    object-fit: contain;    /* keep aspect ratio, show full image */
+    height: 90vh; 
+    max-width: 95vw; 
+    object-fit: contain; 
     border-radius:20px;
     box-shadow:0 0 30px rgba(0,0,0,0.8);
     display:block;
@@ -217,13 +217,13 @@ button{
 <!-- PAGE 3: IMESSAGE -->
 <div id="page3" class="page marvin">
     <div class="chat" id="chatBox"></div>
-    <button onclick="goToFinal()">Yes 🖤</button>
-    <button id="noBtn">No</button>
+    <button onclick="goToFinal()" style="font-size:2rem;padding:25px 50px;">Yes 🖤</button>
+    <button id="noBtn" style="font-size:2rem;padding:25px 50px;">No</button>
 </div>
 
 <!-- PAGE 4: FINAL VALENTINE IMAGE -->
 <div id="page4" class="page marvin">
-    <h2>Be My Mine
+    <h2>Be My Valentine 💖</h2>
     <img id="valentineImg" src="ME.jpg" alt="Me">
 </div>
 
@@ -243,7 +243,7 @@ cnTowerBg.classList.add("shake");
 function acceptCall(){
     transition("callPage","page1");
     cnTowerBg.classList.remove("shake");
-    cnTowerBg.classList.add("zoom-dramatic"); // dramatic zoom
+    cnTowerBg.classList.add("zoom-dramatic"); 
     document.getElementById("acceptBtn").classList.remove("pulse");
     document.getElementById("declineBtn").classList.remove("pulse");
 }
@@ -254,13 +254,18 @@ declineBtn.addEventListener("mouseover",()=>{
     declineBtn.style.transform="translateX(50px)";
 });
 
-/* PASSWORD */
+/* PASSWORD - PLAY SONG ON INTERACTION */
 function checkPassword(){
     if(document.getElementById("password").value==="angel"){
         transition("page1","page2");
         createRain();
+
+        // Play the song (user interacted)
         const music = document.getElementById("bgMusic");
-        music.play().catch(()=>{});
+        music.play().catch(()=>{
+            console.log("Autoplay blocked, try clicking Keep Listening...");
+        });
+
     }else{alert("Wrong number.");}
 }
 
@@ -323,5 +328,3 @@ function createRain(){
 </script>
 </body>
 </html>
-
-
