--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ button{
 
 <!-- PAGE 4: FINAL VALENTINE IMAGE -->
 <div id="page4" class="page marvin">
-    <h2>Be My Valentine 💖</h2>
+    <h2>You're Mne Now ❤️</h2>
     <img id="valentineImg" src="ME.jpg" alt="Me">
 </div>
 
@@ -328,3 +328,4 @@ function createRain(){
 </script>
 </body>
 </html>
+
